--- a/Sample/Sample/MainPage.xaml
+++ b/Sample/Sample/MainPage.xaml
@@ -2,7 +2,6 @@
 <TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
             xmlns:local="clr-namespace:Sample"
-            xmlns:acr="clr-namespace:Acr.XamForms;assembly=Acr.XamForms"
             x:Class="Sample.MainPage"
             Title="Jobs Sample">
 
@@ -106,7 +105,7 @@
                     </ListView.ItemTemplate>
                 </ListView>
 
-                <Button Text="Purge Logs 8 hours or older"
+                <Button Text="Purge Logs Older Than 8hrs"
                         Command="{Binding PurgeOldLogs}"
                         Grid.Row="1" />
 
