* fallback job factory * ability to stop job from repeating (within a job without job manager) or have the job run once

--- a/Sample/Sample/MainPage.xaml
+++ b/Sample/Sample/MainPage.xaml
@@ -37,6 +37,7 @@
                                   Command="{Binding ChangeNetworkType}" />
                         <SwitchCell Text="Battery Not Low" On="{Binding BatteryNotLow}" />
                         <SwitchCell Text="Device Charging" On="{Binding DeviceCharging}" />
+                        <SwitchCell Text="Repeat" On="{Binding Repeat}" />
                     </TableSection>
                 </TableView>
 
