--- a/Sample/Sample/MainPage.xaml
+++ b/Sample/Sample/MainPage.xaml
@@ -20,6 +20,9 @@
 
                 <TableView Intent="Form" Grid.Row="0">
                     <TableSection>
+                        <TextCell Text="Has Permission" Detail="{Binding HasPermission}" />
+                    </TableSection>
+                    <TableSection>
                         <EntryCell Label="Job Name"
                                    Text="{Binding JobName}" />
 
